--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "boostrap": "^2.0.0",
     "bootstrap": "^4.6.0",
     "flickity": "^2.2.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-record": "^1.0.5",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
